[package]
name = "diff_utils"
version = "1.0.0-pre1"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
description = "Library to perform the diff and generate patch files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/anixe/diff-assert"

[badges]
maintenance = { status = "actively-developed" }

[features]
display = [ "colored" ]
patch = [ "chrono" ]

[dependencies]
diffs = "0.4.1"
itertools = "0.10.1"

colored = { version = "1.9.3", optional = true }
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
test-case = "1.1.0"
insta = "0.16.1"
anyhow = "1.0.41"
glob = "0.3.0"
itertools = "0.10.1"